--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^4.2.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "dateformat": "^5.0.2",
+    "material-paper": "0.0.8",
     "mdb-react-ui-kit": "^1.5.0",
-    "mdbreact": "^5.1.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-bootstrap-icons": "^1.7.2",
