--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
@@ -46,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^11.2.7",
+    "jest-dom": "^4.0.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
